--- a/css/navigation.css
+++ b/css/navigation.css
@@ -33,7 +33,7 @@
     transform: translateX(350px);
 }
 .off-canvas {
-    background: #333;
+    background: #fff;
 }
 .off-canvas {
     padding: 40px;
@@ -42,14 +42,14 @@
     font-size: 1.4rem;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-family: 'Dosis', sans-serif;
-    color: #ccc;
+    color: #111;
     text-transform: uppercase;
     line-height: 1.7;
     outline: none;
 }
 .off-canvas .menu li.active {
-    border-top: solid 2px #fff;
-    border-bottom: solid 2px #fff;
+    border-top: solid 2px #111;
+    border-bottom: solid 2px #111;
 }
 .off-canvas .menu li.active > a {
     color: #fff;
@@ -82,7 +82,6 @@
         position: fixed;
         top: 0;
         width: 100%;
-        background: #333;
         padding: 20px 0;
         -moz-transition-duration: 0.5s;
         -o-transition-duration: 0.5s;
@@ -125,24 +124,24 @@
         font-size: 1.2rem;
         font-family: 'Yanone Kaffeesatz', sans-serif;
         font-family: 'Dosis', sans-serif;
-        color: #fff;
+        color: #111;
         text-transform: uppercase;
         line-height: 1.3;
         margin: 0 4px;
     }
     .navigation-wrapper li.active {
-        border-top: solid 2px #fff;
-        border-bottom: solid 2px #fff;
+        border-top: solid 2px #111;
+        border-bottom: solid 2px #111;
     }
     .navigation-wrapper li.active > a {
         color: #fff;
         background: transparent;
     }
     .navigation-wrapper li:hover > a {
-        color: #fff;
+        color: #111;
     }
     .navigation-wrapper li.active:hover > a {
-        color: #fff;
+        color: #111;
     }
 
 
