Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
         <div class="grid-x grid-margin-x">
             
             <div class="cell text-center">
-                <a id="facebook-footer" href="https://www.facebook.com/Altondrillingltd/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                <small>&copy; Alton Drilling {{ site.time | date: '%Y' }}</small>
+                <a id="facebook-footer" href="https://www.facebook.com/Footprints-Preschool-240172169496852/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                <small>&copy; {{ site.title }} {{ site.time | date: '%Y' }}</small>
                 <!-- <br /> -->
                 <!-- <small>website: <a style="color: #fff;" href="http://www.lumina.net.nz">www.lumina.net.nz</a></small> -->
             </div>
