--- a/css/app.css
+++ b/css/app.css
@@ -99,13 +99,12 @@ section.footer {
 }
 
 .heading {
-    background: #999;
-    background: #546a3b;
     padding: 30px 0;
     margin-bottom: 60px;
 }
 .heading h1 {
-    color: #fff;
+    color: #111;
+    border-bottom: solid 2px #111;
 }
 .home .heading {
     margin-bottom: 0;
