--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -1,17 +1,3 @@
-<div class="heading">
-    
-    <div class="wrapper-padding">
-    
-        <div class="grid-container">
-            <div class="grid-x grid-margin-x">
-                 
-                <div class="cell">
-                    <h1>{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
-                </div>
-                
-            </div>
-        </div>
-    
-    </div>
-    
+<div class="cell">
+    <h1 class="main-heading">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
 </div>
