Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -102,8 +102,12 @@ h1.main-heading {
     color: #111;
     padding-bottom: 1rem;
     border-bottom: solid 2px #111;
-     margin-bottom: 60px;
+    margin-bottom: 60px;
 }
+.home h1.main-heading {
+    margin-bottom: 0;
+}
+
 
 /* -------- */
 /* LINKS    */
