--- a/css/navigation.css
+++ b/css/navigation.css
@@ -90,6 +90,8 @@
         -webkit-flex-wrap: wrap; /* Safari 6.1+ */
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+        background: #fff;
+        border-bottom: solid 1px #ccc;
     }
     .navigation-wrapper.sticky-top {
         padding: 5px 0;
