--- a/css/app.css
+++ b/css/app.css
@@ -105,7 +105,7 @@ h1.main-heading {
     margin-bottom: 60px;
 }
 .home h1.main-heading {
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
 }
 
 
