Updated '_includes/slider.html' via CloudCannon

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -6,7 +6,7 @@
         <div class="slide_element">
             <!-- SLIDES -->
             {% for slide in site.data.slider.images %}
-            <div class="slide" data-mightyslider="cover: '{{ slide.image }}'">
+            <div class="slide" data-mightyslider="cover: '{{ slide.slider_image }}'">
                 <h2 class="mSCaption my-title" data-msanimation="{delay: 300, speed: 700, style: {top: 120, opacity: 1} }">
                     {{ slide.title }}
                 </h2>
