--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -1,68 +1,38 @@
-<!-- PARENT -->
-<div id="my-slider" class="mightyslider_modern_skin hide-for-print">
-    <!-- FRAME -->
-    <div class="frame">
-        <!-- SLIDEELEMENT -->
-        <div class="slide_element">
-            <!-- SLIDES -->
-            {% for slide in site.data.slider.images %}
-            <div class="slide" data-mightyslider="cover: '{{ slide.slider_image }}'">
-                <h2 class="mSCaption my-title" data-msanimation="{delay: 300, speed: 700, style: {top: 120, opacity: 1} }">
-                    {{ slide.title }}
-                </h2>
-                <p class="mSCaption my-blurb lead" data-msanimation="{delay: 500, speed: 700, style: {top: 185, opacity: 1} }">
-                    {{ slide.sub_title }}
-                </p>
-                <div class="mSCaption my-mask" data-msanimation="{delay: 500, speed: 900, style: {opacity: 0.5} }">
-                </div>
-                <div class="credit">
-                    <!-- &copy; Alton Drilling -->
-                </div>
-            </div>
+<div class="css-slider-wrapper-outer">
+
+    <!-- Slider Wrapper -->
+    <div class="css-slider-wrapper">
+          
+          {% for slide in site.data.slider.slides %}
+          <input type="radio" name="slider" class="slide-radio{{ forloop.index }}" id="slider_{{ forloop.index }}" {% if forloop.first %}checked{% endif %} />
+          {% endfor %}
+    
+          <!-- Slider Pagination -->
+          <div class="slider-pagination">
+            {% for slide in site.data.slider.slides %}
+            <label for="slider_{{ forloop.index }}" class="page{{ forloop.index }}"></label>
             {% endfor %}
-            <!-- END OF SLIDES -->
-        </div>
-        <!-- END OF SLIDEELEMENT -->
+          </div>
+          
+          {% for slide in site.data.slider.slides %}
+    
+          <div class="css-slider slide-{{ forloop.index }}" style="{% if slide.image %}background-image: url('{{ site.baseurl }}{{ slide.image }}');{% endif %}">
+            <!-- <img src="{{ site.baseurl }}/images/model-1.png" alt=""> -->
+            <div class="slider-content">
+              <h4>{{ slide.sub_title }}</h4>
+              <h2>{{ slide.title }}</h2>
+              <p class="blurb">{{ slide.blurb }}</p>
+            </div>
+            
+            <button type="button" class="more-btn button" name="button">More...</button>
+            
+            <div class="number-pagination">
+              <span>{{ forloop.index }}</span>
+            </div>
+          </div>
+          
+          {% endfor %}
+          
     </div>
-    <!-- END OF FRAME -->
+
 </div>
-<!-- END OF PARENT -->
-
-<script type="text/javascript">
-    jQuery(document).ready(function($) {
-        (function(){
-            // Global slider's DOM elements
-            var $example = $('#my-slider'),
-                $frame = $('.frame', $example);
-
-            // Calling mightySlider via jQuery proxy
-            $frame.mightySlider({
-                speed: 1000,
-                easing: 'easeOutExpo',
-                viewport: 'fill',
-                
-                // Navigation options
-                navigation: {
-                    slideSize: '100%',
-                    keyboardNavBy: 'slides'
-                },
-
-                // Dragging options
-                dragging: {
-                    swingSpeed:    0.1
-                },
-
-                // Pages options
-                pages: {
-                    activateOn: 'click'
-                },
-
-                // Commands options
-                commands: {
-                    pages: 1,
-                    buttons: 1
-                }
-            });
-        })();
-    });
-</script>
