Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,6 +140,10 @@
 	    <script src="{{ site.baseurl }}/mightyslider/js/tweenlite.js"></script>
 	    {% endif %}
 	    
+	    <script>
+	        // make the first slide animate
+	        $("#slider_1").prop("checked");
+	    </script>
 		<!--<![endif]-->
 	
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
