--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
                 <div class="grid-container">
                     <div class="grid-x grid-margin-x">
                         <div class="cell">
-                            <img src="{{ site.baseurl }}/images/print-logo.jpg" alt="{{ site.title}}" />
+                            <!-- <img src="{{ site.baseurl }}/images/print-logo.jpg" alt="{{ site.title}}" /> -->
                         </div>
                     </div>
                 </div>
