Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@
 	    
 	    <script>
 	        // make the first slide animate
-	        $("#slider_1").prop("checked") == true;
+	        $("#slider_1").prop("checked",true);
 	    </script>
 		<!--<![endif]-->
 	
