Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,8 +132,10 @@
 	    {% endif %}
 	    
 	    <script>
-	        // make the first slide animate
-	        $("#slider_1").prop("checked",true);
+	        $( document ).ready(function() {
+	            // make the first slide animate
+	            $("#slider_1").prop("checked",true);
+	        });
 	    </script>
 		<!--<![endif]-->
 	
