--- a/css/slider.css
+++ b/css/slider.css
@@ -73,7 +73,11 @@
   bottom: 30px;
   padding: 60px 80px 70px 80px;
   margin-left: 30px;
-  background: rgba(0,0,0,0);
+  opacity: 0;
+   -webkit-transition: opacity 800ms;
+  transition: opacity 800ms;
+  -webkit-transition-delay: 1.4s; /* Safari */
+  transition-delay: 1.4s;
 }
 .slider-content * {
   color: #fff;
@@ -298,7 +302,7 @@
 .slide-radio4:checked ~ .slider-content,
 .slide-radio5:checked ~ .slider-content,
 .slide-radio6:checked ~ .slider-content {
-    background: rgba(0,0,0,0.3);
+    opacity: 1;
 }
 
 /* Responsive */
