--- a/css/slider.css
+++ b/css/slider.css
@@ -73,7 +73,7 @@
   bottom: 30px;
   padding: 60px 80px 70px 80px;
   margin-left: 30px;
-  background; rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.3);
 }
 .slider-content * {
   color: #fff;
