Updated '_includes/heading.html' via CloudCannon

--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -1,1 +1,7 @@
-<h1 class="main-heading">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
+<div class="wrapper-padding">
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+            <h1 class="main-heading">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
+        </div>
+    </div>
+</div>
