Updated '_includes/heading.html' via CloudCannon

--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -1,4 +1,4 @@
-<div class="wrapper-padding">
+<div class="wrapper-padding heading">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
             <h1 class="main-heading">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
