--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -1,7 +1,9 @@
 <div class="wrapper-padding main-heading">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
-            <h1 class="text-center">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
+            <div class="cell">
+                <h1 class="text-center">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
+            </div>
         </div>
     </div>
 </div>
