Updated '_includes/heading.html' via CloudCannon

--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -2,7 +2,7 @@
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
             <div class="cell">
-                <h1 class="text-center">{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
+                <h1>{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
             </div>
         </div>
     </div>
