Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -95,6 +95,7 @@ section.footer {
     background: #0181fe;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 .main-heading h1 {
     color: #fff;
