--- a/css/app.css
+++ b/css/app.css
@@ -93,6 +93,10 @@ section.footer {
 }
 .main-heading {
     background: #0181fe;
+    background-image: linear-gradient(45deg, #fff 50%, transparent 50%), linear-gradient(-45deg, #fff 50%, transparent 50%);
+    background-position: bottom left, bottom left;
+    background-size: 15px 15px;
+    background-repeat: repeat-x;
     padding-top: 2rem;
     padding-bottom: 2rem;
     margin-bottom: 3rem;
