--- a/css/app.css
+++ b/css/app.css
@@ -94,20 +94,21 @@ section.footer {
 /* From: https://codepen.io/yangg/pen/mJBWPG */
 .main-heading {
     background: #0181fe;
-    background-image: linear-gradient(45deg, #fff 50%, transparent 50%), linear-gradient(-45deg, #fff 50%, transparent 50%);
-    background-position: bottom left, bottom left;
-    background-size: 12px 12px;
-    background-repeat: repeat-x;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    margin-bottom: 3rem;
 }
 .main-heading 
 .main-heading h1 {
     color: #fff;
 }
 .main-heading-sub {
-    
+    height: 20px;
+    background: #ff722d;
+    background-image: linear-gradient(45deg, #fff 50%, transparent 50%), linear-gradient(-45deg, #fff 50%, transparent 50%);
+    background-position: bottom left, bottom left;
+    background-size: 12px 12px;
+    background-repeat: repeat-x;
+    margin-bottom: 3rem;
 }
 .bgd-white {
     background: #fff;
