--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,8 @@
     background: #d4a300;
     background-image: linear-gradient(135deg, #fff 50%, transparent 50%), linear-gradient(225deg, #fff 50%, transparent 50%), linear-gradient(45deg, #fff 50%, transparent 50%), linear-gradient(-45deg, #fff 50%, transparent 50%);
     background-position: top left, top left, bottom left, bottom left;
+    background-size: 12px 12px;
+    background-repeat: repeat-x;
 }
 .footer * {
     color: #fff;
