--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,7 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   right: 0;
   background-repeat: repeat-x;
   height: 10px;
@@ -20,7 +20,7 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   right: 0;
   background-repeat: repeat-x;
   height: 15px;
