Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,27 +5,26 @@
     position: relative;
 }
 .footer::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  background-repeat: repeat-x;
-  height: 10px;
-  background-size: 20px 20px;
-  background-image: radial-gradient(circle at 10px -5px, transparent 12px, white 13px);
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-repeat: repeat-x;
+    height: 10px;
+    background-size: 20px 20px;
+    background-image: radial-gradient(circle at 10px 15px,transparent 12px,#fff 13px);
 }
-
 .footer::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  background-repeat: repeat-x;
-  height: 15px;
-  background-size: 40px 20px;
-  background-image: radial-gradient(circle at 10px 15px, white 12px, transparent 13px);
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-repeat: repeat-x;
+    height: 15px;
+    background-size: 40px 20px;
+    background-image: radial-gradient(circle at 10px 0px,#fff 12px,transparent 13px);
 }
 .footer * {
     color: #fff;
