Updated '_includes/heading.html' via CloudCannon

--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -1,9 +1,10 @@
 <div class="wrapper-padding main-heading">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
-            <div class="cell">
+            <div class="cell" style="position: relative;">
                 <h1>{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
             </div>
+            <img src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" style="position: absolute; left: top: -20px; left: 80px; z-index: 10000;" />
         </div>
     </div>
 </div>
