--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -4,7 +4,7 @@
             <div class="cell">
                 <h1>{% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
             </div>
-            <img src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" style="position: absolute; left: top: -20px; left: 80px; z-index: 10000;" />
+            <img src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" style="position: absolute; top: -20px; left: -80px; z-index: 10000;" />
         </div>
     </div>
 </div>
