Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="wrapper-padding text-center">
     <div class="grid-container">
-        <div class="grid-x grid-margin-x">
+        <div class="grid-x grid-margin-x" style="position: relative;">
             
             <div class="cell text-center">
                 <a id="facebook-footer" href="https://www.facebook.com/Footprints-Preschool-240172169496852/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
@@ -8,6 +8,8 @@
                 <!-- <br /> -->
                 <!-- <small>website: <a style="color: #fff;" href="http://www.lumina.net.nz">www.lumina.net.nz</a></small> -->
             </div>
+            
+            <img src="{{ site.baseurl }}/images/footprint-orange.png" alt="{{ site.title }}" style="position: absolute; top: -40px; right: -90px; z-index: 10000;" />
             
         </div>
     </div>
