Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -67,9 +67,9 @@
 section.blurb {
     padding-top: 80px;
     padding-bottom: 60px;
-    /* background: #fff url('../images/bgd-home-top.jpg') no-repeat;
-    background-size: auto 100%;
-    background-position: right center; */
+    background: #fff url('../images/girls-rocking-horse.jpg') no-repeat;
+    background-size: cover;
+    background-position: right center;
 }
 section.shortcuts {
     padding-top: 70px;
