Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -71,6 +71,17 @@ section.blurb {
     background-size: 100% auto;
     background-position: right center;
 }
+sectio.blurb::after{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  bottom: 0;
+  transform-origin: left bottom;
+  transform: skewY(3deg);
+}
 section.shortcuts {
     padding-top: 70px;
     padding-bottom: 70px;
