--- a/css/app.css
+++ b/css/app.css
@@ -71,7 +71,7 @@ section.blurb {
     background-size: 100% auto;
     background-position: right center;
 }
-sectio.blurb::after{
+section.blurb::after{
   content: '';
   width: 100%;
   height: 100%;
