--- a/css/app.css
+++ b/css/app.css
@@ -114,12 +114,12 @@ section.footer {
 }
 /* Adapted from: https://codepen.io/btargac/pen/JGOGoj */
 .main-heading-sub {
-    height: 20px;
+    height: 16px;
     background: #ff722d;
-    background-image: linear-gradient(45deg, #fff 50%, transparent 50%), linear-gradient(-45deg, #fff 50%, transparent 50%);
+    /* background-image: linear-gradient(45deg, #fff 50%, transparent 50%), linear-gradient(-45deg, #fff 50%, transparent 50%);
     background-position: bottom left, bottom left;
     background-size: 16px 16px;
-    background-repeat: repeat-x;
+    background-repeat: repeat-x; */
     margin-bottom: 3rem;
 }
 .bgd-white {
