--- a/css/app.css
+++ b/css/app.css
@@ -71,17 +71,12 @@ section.blurb {
     background-size: 100% auto;
     background-position: right center;
     position: relative;
-}
-section.blurb::after{
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: inherit;
-  z-index: -1;
-  bottom: 0;
-  transform-origin: left bottom;
-  transform: skewY(3deg);
+    clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 100%,
+    0 calc(100% - 6vw)
+    );
 }
 section.shortcuts {
     padding-top: 70px;
