--- a/css/app.css
+++ b/css/app.css
@@ -72,10 +72,10 @@ section.blurb {
     background-position: right center;
     position: relative;
     clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 100%,
-    0 calc(100% - 6vw)
+    0 calc(100% - 6vw), /* left top */
+    100% 0, /* right top */ 
+    100% 100%, /* right bottom */
+    0 0 /* left bottom */
     );
 }
 section.shortcuts {
