--- a/css/app.css
+++ b/css/app.css
@@ -74,10 +74,10 @@ section.blurb {
     /* Skewed border */
     /* Below from: https://kilianvalkhof.com/2017/design/sloped-edges-with-consistent-angle-in-css/ */
     clip-path: polygon(
-    0 calc(100% - 6vw), /* left top */
+    0 0, /* left top */
     100% 0, /* right top */ 
-    100% 100%, /* right bottom */
-    0 0 /* left bottom */
+    0 calc(100% - 6vw), /* right bottom */
+    100% 100% /* left bottom */
     );
 }
 section.shortcuts {
