--- a/css/app.css
+++ b/css/app.css
@@ -77,7 +77,7 @@ section.blurb {
     0 0, /* left top */
     100% 0, /* right top */ 
     0 calc(100% - 6vw), /* right bottom */
-    100% 100% /* left bottom */
+    0 0 /* left bottom */
     );
 }
 section.shortcuts {
