--- a/css/app.css
+++ b/css/app.css
@@ -76,7 +76,7 @@ section.blurb {
     clip-path: polygon(
     0 0, /* left top */
     100% 0, /* right top */ 
-    0 calc(100% - 6vw), /* right bottom */
+    100% 100%, /* right bottom */
     0 0 /* left bottom */
     );
 }
