--- a/css/app.css
+++ b/css/app.css
@@ -76,8 +76,8 @@ section.blurb {
     clip-path: polygon(
     0 0, /* left top */
     100% 0, /* right top */ 
-    100% 100%, /* right bottom */
-    0 calc(100% - 6vw)% /* left bottom */
+    100% calc(100% - 6vw)%, /* right bottom */
+    0 100%/* left bottom */
     );
 }
 section.shortcuts {
