--- a/css/app.css
+++ b/css/app.css
@@ -74,11 +74,11 @@ section.blurb {
     /* Skewed border */
     /* Below from: https://kilianvalkhof.com/2017/design/sloped-edges-with-consistent-angle-in-css/ */
     clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 100%,
-    0 calc(100% - 6vw)
-  );
+    0 0, /* left top */
+    100% 0, /* right top */ 
+    100% calc(100% - 6vw)%, /* right bottom */
+    0 100% /* left bottom */
+    );
 }
 section.shortcuts {
     padding-top: 70px;
