Updated 'css/buttons.css' via CloudCannon

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -2,7 +2,7 @@
 button {
     text-transform: uppercase;
     line-height: 1.4;
-    background: #9db26f !important;
+    background: #ff722d !important;
     color: #fff !important;
     padding: .85em 2em;
     font-size: 0.98rem;
