Updated 'css/buttons.css' via CloudCannon

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -21,7 +21,7 @@ button.close-button:hover {
 }
 .button:visited,
 button:visited { 
-    background: #9db26f !important;
+    background: #ff722d !important;
 }
 .button:hover,
 button:hover { 
