--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                 {% endif %}
                 
                 {% if contact.phone %}
-                    <h3 style="padding-right: 3rem;"><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }}</h3>
+                    <h3><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }} &nbsp;<i style="color: transparent;" class="fas fa-phone"></i></h3>
                 {% endif %}
                 
                 {% if contact.facebook_url %}
