Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,6 +114,8 @@
 		</div>
 		
 		<!--[if gt IE 9]><!--> 
+		<!-- Core jQuery. Make same as current non-CDN version of Foundation-->
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="{{ site.baseurl }}/js/vendor/what-input.js"></script>
 		<script src="{{ site.baseurl }}/js/vendor/foundation.js"></script>
 		<script src="{{ site.baseurl }}/js/app.js"></script>
