--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/print.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/blog.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/ie.css" />
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/image-lightbox.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/js/lightbox/css/lightgallery.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/map.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	{% if page.url == "/" %}
@@ -51,11 +51,6 @@
 	<!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-
-	<!--[if gt IE 9]><!--> 
-	<!-- Core jQuery Script -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-    <!--<![endif]-->
     
     <script src='https://www.google.com/recaptcha/api.js'></script>
 
