--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -1,21 +1,22 @@
-<div class="grid-x grid-margin-x grid-padding-y small-up-{{ include.small }} medium-up-{{ include.medium }}  large-up-{{ include.large }} lightbox sibling-fade">
+<p><em>Click on image to enlarge:</em></p>
+<div id="lightbox" class="grid-x grid-margin-x grid-padding-y small-up-{{ include.small }} medium-up-{{ include.medium }} large-up-{{ include.large }} lightbox">
         
-        {% assign sorted_photos = page.photos | reverse %}
+    {% assign sorted_photos = page.photos | reverse %}
     
-        {% for image in sorted_photos | reverse %}
+    {% for image in sorted_photos | reverse %}
     
-            {% if image.gallery_image %}
+        {% if image.gallery_image %}
         
-                <div class="cell">
+            <div class="cell" data-src="{{ site.baseurl }}{{ image.gallery_image }}">
                     
-                    <a href="{{ site.baseurl }}{{ image.gallery_image }}" title="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" data-imagelightbox="f">
+                <a href="{{ site.baseurl }}{{ image.gallery_image }}" title="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}">
                         <img src="//images.weserv.nl/?url={{ site.url | remove: 'https://' | remove: 'http://' }}{{ image.gallery_image }}&w=251&h=251&t=square" alt="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" title="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" />
-                    </a>
+                </a>
     
-                </div>
+            </div>
         
-            {% endif %}
+        {% endif %}
     	  
-        {% endfor %}
+    {% endfor %}
     
 </div>
