Updated 'css/navigation.css' via CloudCannon

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -144,7 +144,7 @@
         color: #111;
     }
     .navigation-wrapper li.active:hover > a {
-        color: #111;
+        color: #fff;
     }
 
 
