Updated 'css/navigation.css' via CloudCannon

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -137,7 +137,7 @@
     }
     .navigation-wrapper li.active > a {
         color: #fff;
-        background: #999;
+        background: #ff722d;
         border-radius: 10px;
     }
     .navigation-wrapper li:hover > a {
