Updated 'css/navigation.css' via CloudCannon

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,12 +2,7 @@
     display: none;
 }
 .toggle-container {
-    /*position: absolute;
-    z-index: 1000;
-    top: 20px;
-    left: 0;
-    width: 100%; */
-    background: #333;
+    background: #fff;
 }
 /* See button.css for rest of styling for this button */
 #mobile-menu-toggle {
