--- a/css/buttons.css
+++ b/css/buttons.css
@@ -58,7 +58,7 @@ button:hover {
 button#mobile-menu-toggle {
     background: rgba(0,0,0,0) !important;
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    color: #fff;
+    color: #111;
     font-size: 3rem;
     padding: 2px 8px 0 8px;
     line-height: 1;
