--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -124,13 +124,9 @@
                 selector: '.cell'
             });
         </script>
-	    
-	    <script>
-	        $( document ).ready(function() {
-	            // make the first slide animate
-	            $("#slider_1").prop("checked",true);
-	        });
-	    </script>
+        {% if page.url == "/" %}
+	    <script src="{{ site.baseurl }}/js/slider.js"></script>
+	    {% endif %}
 		<!--<![endif]-->
 	
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
